--- a/.github/workflows/GitHubPages.yml
+++ b/.github/workflows/GitHubPages.yml
@@ -26,8 +26,20 @@ jobs:
 
       - name: Deploy to GitHub Pages
         run: |
+          # Configura o Git
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
+
+          # Acessa o diretório de build do Angular
+          cd dist/front-meufacilitador  # Substitua com o caminho correto do seu build
+
+          # Inicializa o repositório Git
+          git init
           git add -A
           git commit -m "Deploy to GitHub Pages"
-          git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" gh-pages
+
+          # Adiciona o repositório remoto (branch gh-pages)
+          git remote add origin https://github.com/${{ github.repository }}.git
+
+          # Push forçando o envio para o branch gh-pages
+          git push --force origin master:gh-pages
