--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,8 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/front-meufacilitador",
+            "baseHref": "/front-meufacilitador/",
+            "outputPath": "dist/front-meufacilitador/browser",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
