--- a/.github/workflows/GitHubPages.yml
+++ b/.github/workflows/GitHubPages.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js 18
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: '18'
 
@@ -22,24 +22,11 @@ jobs:
         run: npm install
 
       - name: Build Angular project
-        run: npm run build --prod
+        run: npm run build --prod --base-href "/front-meufacilitador/"
 
       - name: Deploy to GitHub Pages
-        run: |
-          # Configura o Git
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-
-          # Acessa o diretório de build do Angular
-          cd dist/front-meufacilitador  # Substitua com o caminho correto do seu build
-
-          # Inicializa o repositório Git
-          git init
-          git add -A
-          git commit -m "Deploy to GitHub Pages"
-
-          # Adiciona o repositório remoto (branch gh-pages)
-          git remote add origin https://github.com/${{ github.repository }}.git
-
-          # Push forçando o envio para o branch gh-pages usando o GITHUB_TOKEN
-          git push --force https://x-access-token:${{ secrets.MY_GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:gh-pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: dist/front-meufacilitador
+          branch: gh-pages
+          token: ${{ secrets.MY_GITHUB_TOKEN }}
