--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "start:prod": "ng serve --configuration=produtiction",
+    "build": "ng build --build-optimizer",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:prod": "ng build --configuration=production --base-href=/front-meufacilitador/"
   },
   "private": true,
   "dependencies": {
