--- a/angular.json
+++ b/angular.json
@@ -11,12 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "/front-meufacilitador/",
             "outputPath": "dist/front-meufacilitador",
+            "baseHref": "/front-meufacilitador/",
             "index": "src/index.html",
-            "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
