--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:dev": "ng serve --configuration=development --open",
     "start:prod": "ng serve --configuration=production",
     "build": "ng build --build-optimizer",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "build:dev": "ng build --configuration=development --base-href=/front-meufacilitador/",
     "build:prod": "ng build --configuration=production --base-href=/front-meufacilitador/"
   },
   "private": true,
@@ -19,6 +21,8 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "bootstrap": "^5.3.3",
+    "ngx-currency": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
