--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/front-meufacilitador",
-            "baseHref": "/front-meufacilitador/",
+            "baseHref": "/meufacilitador/",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
