--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/meufacilitador",
+            "outputPath": "dist/front-meufacilitador",
             "baseHref": "/meufacilitador/",
             "index": "src/index.html",
             "main": "src/main.ts",
